# cmus-discord-rpc

./: .travis.yml  Cargo.toml  README.md
src/: main.rs
tests/: fmt.rs
