[package]
name = "cmus-discord-rpc"
version = "0.2.0"
authors = ["Bond_009 <bond.009@outlook.com>"]
keywords = ["discord", "rpc", "cmus"]
repository = "https://github.com/Bond-009/cmus-discord-rpc"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[dependencies]
env_logger = "^0.10"
log = "^0.4"
regex = "^1.7"

[dependencies.discord-rpc-client]
git = "https://gitlab.com/Bond_009/discord-rpc-client.rs.git"
