[package]
name = "cmus-discord-rpc"
version = "0.2.0"
authors = ["Bond_009 <bond.009@outlook.com>"]
description = "Displays the currently playing song from cmus in Discord using Rich Presence"
keywords = ["discord", "rpc", "cmus"]
repository = "https://github.com/Bond-009/cmus-discord-rpc"
edition = "2021"
license = "GPL-3.0-only"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
discord-rpc-client = "0.4"
env_logger = "0.11"
log = "0.4"
regex = "1.11"
